--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.1.2",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
     "eslint": "8.22.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
